--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 [tool.poetry]
-name = "driving-license-kata"
+name = "driving_license_generator"
 version = "0.1.0"
 description = ""
 authors = ["Marie <66479073+ndowkunda@users.noreply.github.com>"]
-readme = "README.md"
-packages = [{include = "driving_license_kata"}]
+#readme = "README.md"
+packages = [{include = "driving_license"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 fastapi = "^0.85.1"
-uvicorn = {extras = ["standard"], version = "^0.19.0"}
+uvicorn = {extras = ["standard"], version = "^0.18.3"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "7.1.3"
